srcs/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana-app
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 3000
      name: http
  selector:
    app: grafana-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-app
  template:
    metadata:
      labels:
        app: grafana-app
    spec:
      containers:
        - name: grafana
          image: grafana_highforward
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
