srcs/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  labels:
    app: influxdb-app
spec:
  type: NodePort
  ports:
    - port: 8086
      nodePort: 8086
      name: http
  selector:
    app: influxdb-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb-app
  template:
    metadata:
      labels:
        app: influxdb-app
    spec:
      containers:
        - name: influxdb
          image: influxdb_highforward
          ports:
            - containerPort: 8086
          imagePullPolicy: Never
