srcs/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-app
spec:
  type: NodePort
  ports:
    - port: 3306
      nodePort: 3306
      name: http
  selector:
    app: mysql-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      volumes:
        - name: mysql-pv-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      containers:
        - name: mysql
          image: mysql_highforward
          ports:
            - containerPort: 3306
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-pv-storage
