srcs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpymadmin-service
  labels:
    app: phpmyadmin-app
spec:
  type: NodePort
  ports:
    - port: 5000
      nodePort: 5000
      protocol: TCP
      name: http
  selector:
    app: phpmyadmin-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-app
  template:
    metadata:
      labels:
        app: phpmyadmin-app
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin_highforward
          ports:
            - containerPort: 50000
          imagePullPolicy: Never
